Client history added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="bower_components/es6-shim/es6-shim.min.js"></script>
     <script src="bower_components/requirejs/require.js" data-main="app"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js">
   </head>
   <body>
   </body>
