--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="roboto-fontface.css">
     <link rel="stylesheet" href="style.css">
     <script src="vendor/es6-shim/es6-shim.min.js"></script>
+    <script src="vendor/jquery/dist/jquery.min.js"></script>
+    <script src="vendor/chartjs/Chart.min.js"></script>
     <script src="app.js"></script>
+    <script src="vendor/clientdiagram/clientdiagram.js"></script>
     <script>
       console.log("Version: #revision#")
     </script>
