added navbar for simpler navigation/better CI

--- a/html/index.html
+++ b/html/index.html
@@ -18,5 +18,30 @@
     </script>
   </head>
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand active" href="http://freifunk-hi.de"><strong>Freifunk Hildesheim</strong></a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+          <li class="divider-vertical"></li>
+          <li><a href="https://freieslabor.org/wiki/Freifunk:Hauptseite">Wiki</a></li>
+          <li><a href="http://map.freifunk-hi.de">Karte</a></li>
+          <li><a href="http://lists.freifunk.net/mailman/listinfo/hildesheim-freifunk.net">Mailingliste</a></li>
+          <li><a href="https://freieslabor.org/wiki/Freifunk:Firmware">Download</a></li>  </ul>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="https://freieslabor.org/wiki/Freies_Labor:Impressum">Impressum</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </nav>
   </body>
 </html>
