--- a/html/index.html
+++ b/html/index.html
@@ -43,5 +43,6 @@
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
+    <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   </body>
 </html>
