--- a/html/clients.html
+++ b/html/clients.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <script src="vendor/chartjs/Chart.min.js"></script>
     <script src="vendor/jquery/dist/jquery.min.js"></script>
   </head>
