--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="roboto-slab-fontface.css">
     <link rel="stylesheet" href="roboto-fontface.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <script src="vendor/es6-shim/es6-shim.min.js"></script>
     <script src="vendor/jquery/dist/jquery.min.js"></script>
     <script src="vendor/chartjs/Chart.min.js"></script>
